@@ -1,3 +1,9 @@
+2006-10-17  Miguel de Icaza  <miguel@novell.com>
+
+	* src/gutf8.c: internal methods
+
+	* src/ghashtable.c: internal methods.
+
 2006-10-16  Miguel de Icaza  <miguel@novell.com>
 
 	* src/gerror.c (g_propagate_error): Implement.
